<resources>
    <string name="app_name">QuranApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masjid_terdekat">Masjid Terdekat</string>
    <string name="assalamualaikum">Assalamualaikum</string>
    <string name="dean">dean</string>
    <string name="daftar_surah">Daftar Surah</string>
    <string name="keterangan">Keterangan</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="shubuh">Shubuh</string>
    <string name="_04_30_am">04.30 AM</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
    <string name="_11_45_am">11.45 AM</string>
    <string name="_14_45_am">14.45 AM</string>
    <string name="_19_00_am">19.00 AM</string>
    <string name="_18_00_am">18.00 AM</string>
    <string name="google_maps_key">AIzaSyBq4ZUumELBdBNWePNz550lTYTgs9pXu7s</string>
</resources>