<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_img_profile">
            <ImageView
                android:layout_width="@dimen/_50dp"
                android:layout_height="@dimen/_50dp"
                android:id="@+id/img_quran"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_quran"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_toEndOf="@id/img_quran"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/app_name"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search"
                app:tint="@color/colorPrimaryDark"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:orientation="vertical"
            android:layout_below="@id/rl_img_profile">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/assalamualaikum"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/dean"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>